# ncu-lesson

./: .gitignore  ALG_HW1_Task1.py  ALG_HW1_Task2.py  ALG_HW1_Task3.py  ALG_HW2_Task1.py  ALG_HW2_Task2.py  ALG_HW2_Task3.py  ALG_HW3_Task1  ALG_HW3_Task1.cpp  ALG_HW3_Task1.py  ALG_HW3_Task2  ALG_HW3_Task2.cpp  ALG_HW3_Task2.py  ALG_HW3_Task3  ALG_HW3_Task3.cpp  ALG_HW3_Task3.py  ALG_HW4_Task1  ALG_HW4_Task1.py  ALG_HW4_Task2  ALG_HW4_Task2.cpp  ALG_HW4_Task3.py  ALG_HW5_Task1.cpp  ALG_HW5_Task2.cpp  ALG_HW5_Task3.cpp  ALG_HW6_Task1  ALG_HW6_Task1.cpp  ALG_HW6_Task2.cpp  ALG_HW6_Task3  ALG_HW6_Task3.cpp  ALG_HW8_Task3.cpp  ALG_HW9_Task1.cpp  ALG_HW9_Task2.cpp  ALG_HW9_Task3.cpp  ALG_QuantumHW_1-1.ipynb  ALG_QuantumHW_1-5.ipynb  ALG_QuantumHW_2-1.ipynb  ALG_QuantumHW_2-5.ipynb  ALG_QuantumHW_3-2.ipynb  ALG_QuantumHW_4-2.ipynb  ALG_QuantumHW_5-4.ipynb  (+44 more)
ALG_Final/: ALG_Final.py  ALG_Final_Task3.py
ALG_Final_Exam/: ALG_Final_Task2.py
ALG_Final_Project/: Model.py  Preprocess.py  main.py
ALG_Final_Project/DataSet/: ImagePreprocessor.py  LabeledDataSet.py  Loader.py  Preprocessor.py
ALG_HW10/src/: ALG_HW10_Task1.py  ALG_HW10_Task2.py  ALG_HW10_Task3.py
ALG_HW11/: ALG_HW11_Task1.py  ALG_HW11_Task2.py  ALG_HW11_Task3.py
ALG_HW7/src/: ALG_HW7_Task1.java  ALG_HW7_Task2.java  ALG_HW7_Task3.java
ALG_HW8/src/: ALG_HW8_Task1.java  ALG_HW8_Task2.java  ALG_HW8_Task3.java
ALG_HW9/src/: Task1.java  Task3.java
CO_Final_Project/: docker-start.sh
CO_Final_Project/image/: Dockerfile  build-image.sh
OS_HW1/: OS_HW1  OS_HW1.cpp  build.sh  list_t.cpp  list_t.h  test.in
testcases/: 1.in  1.out  2.in  2.out
untitled/: .eslintrc.js  .pnp.cjs  package.json  vite.config.ts
