cmake_minimum_required(VERSION 3.22)
project(ncu_lesson)

set(CMAKE_CXX_STANDARD 23)

add_executable(DS_HW1_Task1 DS_HW1_Task1.c)
add_executable(DS_HW1_Task2 DS_HW1_Task2.c)
add_executable(DS_HW2_Task1 DS_HW2_Task1.c)
add_executable(DS_HW2_Task2 DS_HW2_Task2.c)
add_executable(DS_HW3_Task1 DS_HW3_Task1.c)
add_executable(DS_HW3_Task2 DS_HW3_Task2.c)
add_executable(DS_HW4_Task1 DS_HW4_Task1.c)
add_executable(DS_HW4_Task2_test DS_HW4_Task2_test.c)
add_executable(DS_HW4_Task2 DS_HW4_Task2.c)
add_executable(DS_HW4_Task3_test DS_HW4_Task3_test.c)
add_executable(DS_HW4_Task3 DS_HW4_Task3.c)
add_executable(ALG_HW3_Task1 ALG_HW3_Task1.cpp)
add_executable(ALG_HW3_Task2 ALG_HW3_Task2.cpp)
add_executable(ALG_HW3_Task3 ALG_HW3_Task3.cpp)
add_executable(ALG_HW4_Task2 ALG_HW4_Task2.cpp)
add_executable(ALG_HW5_Task1 ALG_HW5_Task1.cpp)
add_executable(ALG_HW5_Task2 ALG_HW5_Task2.cpp)
add_executable(ALG_HW5_Task3 ALG_HW5_Task3.cpp)
add_executable(ALG_HW6_Task1 ALG_HW6_Task1.cpp)
add_executable(ALG_HW6_Task2 ALG_HW6_Task2.cpp)
add_executable(ALG_HW6_Task3 ALG_HW6_Task3.cpp)
add_executable(ALG_HW8_Task3 ALG_HW8_Task3.cpp)
add_executable(ALG_HW9_Task1 ALG_HW9_Task1.cpp)
add_executable(ALG_HW9_Task2 ALG_HW9_Task2.cpp)
add_executable(ALG_HW9_Task3 ALG_HW9_Task3.cpp)
add_executable(ALG_HW11_Task2 ALG_HW11/ALG_HW11_Task2.cpp)
add_executable(PL_HW5 PL_HW5.cpp)
add_executable(PL_HW6 PL_HW6.cpp)
add_executable(PL_HW7 PL_HW7.cpp)
add_executable(PL_HW8 PL_HW8.cpp)
add_executable(PL_HW9 PL_HW9.cpp)
add_executable(PL_HW10 PL_HW10.cpp)
add_executable(PL_HW11 PL_HW11.cpp)